# DoExpert

./: .gitignore  Dockerfile  LICENSE  README.md  logo_base64_final.txt  oa_engine.py  pyproject.toml  requirements.txt  setup.py  streamlit_app_doexpert.py
.github/workflows/: tests.yml
docs/: API_REFERENCE.md  USER_GUIDE.md
doexpert/: __init__.py  cli.py  mcdm.py  metrics.py  pareto.py  pareto_selection.py
doexpert/doe/: __init__.py  orthogonal_arrays.py
examples/: README.md  flat_grinding_L8.csv
tests/: test_mcdm.py  test_metrics.py  test_oa_engine.py  test_pareto.py
